Several NPEs in Entities were fixed.